# TrackInit

./: .gitignore  CMakeLists.txt  LICENSE  backup  bmain.sh  main.cpp  peaks_cluster_-3_-0_1772046367.csv  readme.md
TrackManager/: ManagementService.cpp  TrackerManager.cpp  TrackerManager.hpp  TrackerVisualizer.cpp  TrackerVisualizer.hpp
include/: LatestKBuffer.hpp  ManagementService.hpp  def_init.h  defstruct.h  defsystem.h
src/: BitArray.hpp  Func_dbscan.cpp  Func_dbscan.hpp  HoughSlice.cpp  HoughSlice.hpp  LogicBased.cpp  LogicBased.hpp  LogicBasedInitiator.cpp  LogicBasedInitiator.hpp  ObjectPool.hpp  TrackInitBase.hpp
tests/: CMakeLists.txt  Func_cout.hpp  Func_noise_pointgen.hpp  Func_pointgen.hpp  Real_data_test.cpp  test_BitArray.cpp  test_ClustDBSCAN.cpp  test_HoughSlice.cpp  test_LogicBasedInitiator.cpp  test_ObjectPool.cpp  test_trackinit_callback.cpp  trackinit_visual.py
utils/: nanoflann.hpp
